# atefar

./: .gitignore  aa  claude_did_it.py  coffee.py  history.json  pyproject.toml  requirements.txt  scratch.ipynb  setup.sh
logs/: 2024-08-21T11:13:57.032943.json  2024-08-21T11:16:53.207432.json  2024-08-21T11:17:26.633933.json  2024-08-21T11:19:18.866298.json  2024-08-21T12:11:13.288298.json  2024-08-21T12:13:22.988676.json  2024-08-21T12:13:22.992827_task_analysis.json  2024-08-21T13:10:20.789916_logs.json  2024-08-21T13:15:17.811868_logs.json  2024-08-21T13:15:17.811868_task_analysis.json  2024-08-21T16:18:12.053590_logs.json  2024-08-21T16:18:12.053590_task_analysis.json  2024-08-23T11:18:59.547002_logs.json  2024-08-23T11:18:59.547002_task_analysis.json  2024-08-23T11:28:37.647915_logs.json  2024-08-23T11:28:37.647915_task_analysis.json  2024-08-23T11:32:24.027064_logs.json  2024-08-23T11:32:24.027064_task_analysis.json  2024-08-23T12:02:52.133051_logs.json  2024-08-23T12:02:52.133051_task_analysis.json
misc/: results3.json
mvp_task/: setup.sh
mvp_task/here/: instructions.txt  scoring.py  solution.py
notes/: 2024-08-12-outputs_wip-01.md  2024-08-12-outputs_wip-02.md  2024-08-14-outputs_wip-01.md  2024-08-15-outputs_wip-01.md  2024-08-15-outputs_wip-02.md
src/atefar/: dspy_utils.py  fields.py  paper_analysis.py  paper_pipeline.py  pdf_utils.py  sig_chains.py  sig_data.py  sig_types.py
src/atefar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
trial/: instructions.txt  scoring.py  solution.py
trial2/: setup.sh
trial2/here/: scoring.py  (+3 more)
