[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atefar"
version = "0.1.0"
# # authors = [{ name = "Your Name", email = "your.email@example.com" }]
# description = "A short description of the atefar package"
# readme = "README.md"
# requires-python = ">=3.7"
# license = "MIT"